--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -54,6 +54,10 @@ section {
     font-family: var(--fonte3);
     font-size: 4.5vw;
 }
+
+section > p {
+    padding-bottom: 2em;
+}
 section.normal {
     background-color: white;
     color: black;
@@ -62,13 +66,27 @@ section.normal {
 section.imagem {
     background-color: rgb(29, 27, 27);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-attachment: fixed;
 }
 section.imagem > p {
     display: inline-block;
     padding: 5px;;
-    background-color: rgba(0, 0, 0, 0.521);
+    background-color: rgba(0, 0, 0, 0.61);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.616);
 }
 
+section#img01 {
+    background-image: url(imagens/background001.jpg);   
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
+}
 footer {
     background-color: black;
     color: white;
